<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="17dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="17dp"
            app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftm_usd"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/short_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/symbol"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            android:text="@string/polygon_usd"
            android:textSize="12sp"
            android:textColor="@color/sky_blue"
            />

        <TextView
            android:id="@+id/current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_price"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_price"
            app:layout_constraintRight_toLeftOf="@id/guideline3"
            android:text="@string/_0_3899_6_23"
            android:textSize="12sp"
            android:textColor="@color/green"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>